# synchra-core

./: Cargo.toml
src/: crypto.rs  fractal.rs  lib.rs  main.rs
src/utils/: chaos.rs  mod.rs
