[package]
name = "synchra-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
sha3 = "0.10"
pqcrypto-kyber = "0.7"
pqcrypto-traits = "0.3.5"
num-complex = "0.4"
byteorder = "1.4.3"
bincode = "1.3.3"
hex = "0.4.3"
serde = { version = "1.0.210", features = ["derive"] }
secret_sharing_and_dkg = "0.13.0"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-bls12-381 = "0.4.0"
ark-std = "0.4.0"
shamir_secret_sharing = "0.1.1"
num-bigint = "0.4.6"
